--- a/turbo.json
+++ b/turbo.json
@@ -1,16 +1,15 @@
 {
-  "$schema": "https://turbo.build/schema.json",
-  "pipeline": {
+  "$schema": "https://turborepo.com/schema.v2.json",
+  "tasks": {
     "dev": {
       "cache": false,
       "dependsOn": ["^dev"]
     },
     "build": {
-      "outputs": [".next/**", "!.next/cache/**"],
-      "dependsOn": ["^build"]
+      "dependsOn": ["^build"],
+      "inputs": ["$TURBO_DEFAULT$", ".env*"],
+      "outputs": ["dist/**", ".next/**", "!.next/cache/**"]
     },
-    "lint": {
-      "outputs": []
-    }
+    "lint": {}
   }
 }
