--- a/turbo.json
+++ b/turbo.json
@@ -3,12 +3,35 @@
   "tasks": {
     "dev": {
       "cache": false,
-      "dependsOn": ["^dev"]
+      "persistent": true
     },
     "build": {
       "dependsOn": ["^build"],
       "inputs": ["$TURBO_DEFAULT$", ".env*"],
-      "outputs": ["dist/**", ".next/**", "!.next/cache/**"]
+      "outputs": ["dist/**", ".next/**", "!.next/cache/**"],
+      "env": [
+        "TELEGRAM_STORAGE_CHANNEL",
+        "ADMIN_PASSWORD",
+        "JWT_SECRET",
+        "NODE_ENV",
+        "TELEGRAM_BOT_TOKEN",
+        "AUTH_SECRET",
+        "AUTH_GOOGLE_SECRET",
+        "AUTH_GOOGLE_ID",
+        "SHORT_URL",
+        "IMGUR_CLIENT_ID",
+        "IMGUR_IMAGE_URL",
+        "IMGUR_CLIENT_SECRET",
+        "MONGODB_NAME",
+        "MONGODB_URI",
+        "EMAIL_HOST",
+        "OWNER_EMAIL",
+        "URL_SHORTENER_TOKEN",
+        "EMAIL_PASSWORD",
+        "NO_REPLY_EMAIL",
+        "CONTACT_EMAIL",
+        "BLOB_READ_WRITE_TOKEN"
+      ]
     },
     "lint": {}
   }
