--- a/turbo.json
+++ b/turbo.json
@@ -30,7 +30,8 @@
         "EMAIL_PASSWORD",
         "NO_REPLY_EMAIL",
         "CONTACT_EMAIL",
-        "BLOB_READ_WRITE_TOKEN"
+        "BLOB_READ_WRITE_TOKEN",
+        "BASE_URL"
       ]
     },
     "lint": {}
