--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "scripts": {
     "dev": "turbo run dev",
     "build": "turbo run build",
+    "start": "turbo run start",
     "lint": "turbo run lint"
   },
   "dependencies": {
@@ -24,7 +25,6 @@
     "nodemailer": "^7.0.3",
     "react-content-loader": "^7.0.2",
     "react-dropzone": "^14.3.8",
-    "react-qrcode-logo": "^3.0.0",
     "react-toastify": "^11.0.3",
     "tailwind-merge": "^3.3.1",
     "uuid": "^11.0.5",
