--- a/turbo.json
+++ b/turbo.json
@@ -18,6 +18,7 @@
         "AUTH_SECRET",
         "AUTH_GOOGLE_SECRET",
         "AUTH_GOOGLE_ID",
+        "AUTH_BASE_URL",
         "SHORT_URL",
         "IMGUR_CLIENT_ID",
         "IMGUR_IMAGE_URL",
@@ -31,8 +32,14 @@
         "NO_REPLY_EMAIL",
         "CONTACT_EMAIL",
         "BLOB_READ_WRITE_TOKEN",
+        "BLOB_BASE_URL",
         "BASE_URL"
       ]
+    },
+    "start": {
+      "dependsOn": ["^start"],
+      "cache": false,
+      "persistent": true
     },
     "lint": {}
   }
