--- a/turbo.json
+++ b/turbo.json
@@ -10,30 +10,30 @@
       "inputs": ["$TURBO_DEFAULT$", ".env*"],
       "outputs": ["dist/**", ".next/**", "!.next/cache/**"],
       "env": [
-        "TELEGRAM_STORAGE_CHANNEL",
-        "ADMIN_PASSWORD",
-        "JWT_SECRET",
         "NODE_ENV",
-        "TELEGRAM_BOT_TOKEN",
+        "BASE_URL",
         "AUTH_SECRET",
         "AUTH_GOOGLE_SECRET",
         "AUTH_GOOGLE_ID",
         "AUTH_BASE_URL",
         "SHORT_URL",
+        "URL_SHORTENER_TOKEN",
         "IMGUR_CLIENT_ID",
         "IMGUR_IMAGE_URL",
         "IMGUR_CLIENT_SECRET",
         "MONGODB_NAME",
         "MONGODB_URI",
         "EMAIL_HOST",
-        "OWNER_EMAIL",
-        "URL_SHORTENER_TOKEN",
         "EMAIL_PASSWORD",
         "NO_REPLY_EMAIL",
+        "OWNER_EMAIL",
         "CONTACT_EMAIL",
         "BLOB_READ_WRITE_TOKEN",
         "BLOB_BASE_URL",
-        "BASE_URL"
+        "TELEGRAM_STORAGE_CHANNEL",
+        "ADMIN_PASSWORD",
+        "JWT_SECRET",
+        "TELEGRAM_BOT_TOKEN"
       ]
     },
     "start": {
