Multiple Database System Added
Multiple Database System Added
Remove Unwanted Files & Codes

--- a/turbo.json
+++ b/turbo.json
@@ -21,8 +21,9 @@
         "IMGUR_CLIENT_ID",
         "IMGUR_IMAGE_URL",
         "IMGUR_CLIENT_SECRET",
-        "MONGODB_NAME",
-        "MONGODB_URI",
+        "MONGODB_URI_USERS",
+        "MONGODB_URI_SHORTURLS",
+        "MONGODB_URI_IMAGEUPLOADS",
         "EMAIL_HOST",
         "EMAIL_PASSWORD",
         "NO_REPLY_EMAIL",
