--- a/turbo.json
+++ b/turbo.json
@@ -12,15 +12,16 @@
       "env": [
         "NODE_ENV",
         "BASE_URL",
+        "ROOT_URL",
         "AUTH_SECRET",
         "AUTH_GOOGLE_SECRET",
         "AUTH_GOOGLE_ID",
         "AUTH_BASE_URL",
         "SHORT_URL",
         "URL_SHORTENER_TOKEN",
-        "IMGUR_CLIENT_ID",
+        "IMGUR_CLIENT_ID_1",
         "IMGUR_IMAGE_URL",
-        "IMGUR_CLIENT_SECRET",
+        "IMGUR_CLIENT_SECRET_1",
         "MONGODB_URI_USERS",
         "MONGODB_URI_SHORTURLS",
         "MONGODB_URI_IMAGEUPLOADS",
@@ -31,10 +32,6 @@
         "CONTACT_EMAIL",
         "BLOB_READ_WRITE_TOKEN",
         "BLOB_BASE_URL",
-        "TELEGRAM_STORAGE_CHANNEL",
-        "ADMIN_PASSWORD",
-        "JWT_SECRET",
-        "TELEGRAM_BOT_TOKEN",
         "WHERE_TO_REDIRECT_AFTER_PROCESSING"
       ]
     },
