--- a/shared/package.json
+++ b/shared/package.json
@@ -2,5 +2,10 @@
   "name": "shared",
   "version": "1.0.0",
   "type": "module",
-  "main": "index.js"
+  "main": "index.js",
+  "dependencies": {
+    "next": "^15.3.4",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
+  }
 }
