--- a/apps/tools/package.json
+++ b/apps/tools/package.json
@@ -10,9 +10,9 @@
   },
   "dependencies": {
     "jszip": "^3.10.1",
-    "next": "15.3.4",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "next": "^15.3.4",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-qrcode-logo": "^3.0.0"
   }
 }
