Migrate to TypeScript configs and unify shared setup
Replaced jsconfig.json and next.config.mjs files with tsconfig.json and next.config.ts across all apps for TypeScript support. Updated ESLint configs to use shared/config/eslint/next.mjs. Added @repo/shared as a workspace dependency in all package.json files. Refactored sitemap generation to TypeScript and updated logic to use metadata.addToSitemap. Improved code formatting and metadata usage in several page components.

--- a/apps/tools/package.json
+++ b/apps/tools/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@repo/shared": "workspace:*",
     "jszip": "^3.10.1",
     "next": "^15.3.4",
     "react": "^19.1.0",
