--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -8,6 +8,7 @@
     "dev": "nodemon index.js"
   },
   "dependencies": {
+    "@repo/shared": "workspace:*",
     "dotenv": "^16.5.0",
     "fastify": "^4.29.1",
     "fastify-plugin": "^5.0.1",
