--- a/package.json
+++ b/package.json
@@ -1,16 +1,12 @@
 {
   "name": "anix7-workspace",
-  "version": "1.0.0",
   "private": true,
-  "workspaces": [
-    "apps/*",
-    "shared"
-  ],
   "scripts": {
     "dev": "turbo run dev",
     "build": "turbo run build",
     "start": "turbo run start",
-    "lint": "turbo run lint"
+    "lint": "turbo run lint",
+    "typecheck": "turbo run typecheck"
   },
   "dependencies": {
     "@vercel/blob": "^0.27.1",
@@ -26,6 +22,7 @@
     "react-content-loader": "^7.0.2",
     "react-dropzone": "^14.3.8",
     "react-toastify": "^11.0.3",
+    "server-only": "^0.0.1",
     "tailwind-merge": "^3.3.1",
     "uuid": "^11.0.5",
     "zod": "^3.25.61"
@@ -33,11 +30,15 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3.0.0",
     "@tailwindcss/postcss": "^4.1.8",
+    "@types/node": "^22.15.3",
+    "@types/react": "19.1.0",
+    "@types/react-dom": "19.1.1",
     "eslint": "^9.28.0",
     "eslint-config-next": "^15.3.3",
     "postcss": "^8",
     "tailwindcss": "^4.1.8",
-    "turbo": "^2.5.4"
+    "turbo": "^2.5.4",
+    "typescript": "^5"
   },
   "packageManager": "pnpm@10.12.1",
   "engines": {
