--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@eslint/eslintrc": "^3.0.0",
     "@tailwindcss/postcss": "^4.1.8",
     "@types/node": "^22.15.3",
+    "@types/nodemailer": "^7.0.1",
     "@types/react": "19.1.0",
     "@types/react-dom": "19.1.1",
     "eslint": "^9.28.0",
@@ -40,7 +41,7 @@
     "turbo": "^2.5.6",
     "typescript": "^5"
   },
-  "packageManager": "pnpm@10.14.0",
+  "packageManager": "pnpm@10.15.0",
   "engines": {
     "node": ">=18"
   }
