--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "typecheck": "turbo run typecheck"
   },
   "dependencies": {
+    "@babel/parser": "^7.28.3",
+    "@babel/traverse": "^7.28.3",
     "@vercel/blob": "^1.1.1",
-    "acorn": "^8.15.0",
-    "acorn-jsx": "^5.3.2",
     "bcryptjs": "^3.0.2",
     "html-to-image": "^1.11.13",
     "jose": "^6.0.11",
@@ -30,6 +30,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3.0.0",
     "@tailwindcss/postcss": "^4.1.8",
+    "@types/babel__traverse": "^7.28.0",
     "@types/node": "^22.15.3",
     "@types/nodemailer": "^7.0.1",
     "@types/react": "19.1.0",
