--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "nodemailer": "^7.0.3",
     "react-content-loader": "^7.0.2",
     "react-dropzone": "^14.3.8",
+    "react-select": "^5.10.2",
     "react-toastify": "^11.0.3",
     "server-only": "^0.0.1",
     "tailwind-merge": "^3.3.1",
