--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jose": "^6.0.11",
     "mongodb": "^6.16.0",
     "mongoose": "^8.16.1",
+    "motion": "^12.23.12",
     "next-auth": "^5.0.0-beta.25",
     "nodemailer": "^7.0.3",
     "react-content-loader": "^7.0.2",
@@ -43,7 +44,7 @@
     "turbo": "^2.5.6",
     "typescript": "^5"
   },
-  "packageManager": "pnpm@10.15.0",
+  "packageManager": "pnpm@10.16.1",
   "engines": {
     "node": ">=18"
   }
