--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@babel/traverse": "^7.28.3",
     "@vercel/blob": "^1.1.1",
     "bcryptjs": "^3.0.2",
+    "clsx": "^2.1.1",
     "html-to-image": "^1.11.13",
     "jose": "^6.0.11",
     "mongodb": "^6.16.0",
@@ -22,6 +23,7 @@
     "nodemailer": "^7.0.3",
     "react-content-loader": "^7.0.2",
     "react-dropzone": "^14.3.8",
+    "react-icons": "^5.5.0",
     "react-select": "^5.10.2",
     "react-toastify": "^11.0.3",
     "server-only": "^0.0.1",
