--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@vercel/blob": "^1.1.1",
     "bcryptjs": "^3.0.2",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "html-to-image": "^1.11.13",
     "jose": "^6.0.11",
     "mongodb": "^6.16.0",
@@ -22,6 +23,8 @@
     "next-auth": "^5.0.0-beta.25",
     "nodemailer": "^7.0.3",
     "react-content-loader": "^7.0.2",
+    "react-date-picker": "^12.0.1",
+    "react-day-picker": "^9.10.0",
     "react-dropzone": "^14.3.8",
     "react-icons": "^5.5.0",
     "react-select": "^5.10.2",
